--- a/src/index.css
+++ b/src/index.css
@@ -90,3 +90,143 @@ header {
 .btn-neptune:hover {
     border-top: solid #2D68F0
 }
+
+main {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    height: 740px;
+    margin: 146px 166px 56px 166px;
+}
+
+.main-content-row1 {
+    display: flex;
+    height: 518px;
+    width: 1100px;
+    justify-content: space-around;
+}
+
+.main-planet-description {
+    width: 32%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.main-planet-img {
+    width: 68%;
+    align-self: center;
+    padding-left: 162px;
+}
+
+.buttons-planet-unique {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.main-planet-description > h1 {
+    font-family: 'Antonio', sans-serif;
+    font-weight: 500;
+    color: #FFFFFF;
+    font-size: 80px;
+}
+
+.overview-content {
+    font-family: 'Spartan', sans-serif;
+    color: #FFFFFF;
+    font-size: 14px;
+    line-height: 25px;
+    margin: 20px 0px 18px 0px;
+}
+
+.overview-source {
+    margin-bottom: 22px;
+    font-family: 'Spartan', sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    color: #ffffff73;
+}
+
+.overview-source > a {
+    font-weight: 700;
+    color: #ffffff83;
+}
+
+.buttons-planet-unique > button {
+    border: 1px solid #ffffff46;
+    background: transparent;
+    height: 48px;
+    margin: 9px 0px;
+    color: #FFFFFF;
+    text-align: start;
+    font-family: 'Spartan', sans-serif;
+    font-weight: 700;
+    font-size: 12px;
+    letter-spacing: 2.5px;
+}
+
+.buttons-planet-unique > button:hover {
+    background-color: #38384F;
+    cursor: pointer;
+} 
+
+.buttons-planet-unique span {
+    margin: 0px 20px;
+    color: #ffffff83;
+    
+}
+
+.react-arrow {
+    height: 14px;
+    width: 14px;
+    position: relative;
+    top: 3px;
+    left: 5px;
+}
+
+.main-content-row2 {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.main-content-row2 > div {
+    height: 128px;
+    border: 1px solid #ffffff46;
+    padding: 23px;
+    padding-right: 100px;
+    margin-top: 80px;
+}
+
+.main-content-row2 p {
+    font-family: 'Spartan', sans-serif;
+    font-weight: 700;
+    font-size: 11px;
+    color: #ffffff83;
+    letter-spacing: 1px;
+    margin-bottom: 10px;
+}
+
+.main-content-row2 h2 {
+    font-family: 'Antonio', sans-serif;
+    font-weight: 500;
+    font-size: 40px;
+    color: #FFFFFF;
+    letter-spacing: -1.5px;
+}
+
+.rotation-time {
+    margin-left: 0;
+}
+
+.revolution-radius {
+    margin-right: 13px;
+    margin-left: 13px;
+}
+
+.average-temp {
+    margin-right: 0px;
+}
+
