--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
 
 #root {
     min-height: 100vh;
+    max-width: 100vw;
 }
 
 body {
@@ -17,17 +18,20 @@ body {
 
 header {
     display: flex;
-    height: 5.375em;
+    height: 10%;
     width: auto;
     border-bottom: 1px solid #ffffff46;
 }
 
 .header-child1 {
     width: 50%;
+    display: flex;
+    justify-content: start;
+    align-items: center;
 }
 
 .header-child1 > h2 {
-    margin: 22px 0px 0px 32px;
+    margin: 3% 3%;
     color: #FFFFFF;
     font-size: 1.75em;
     font-weight: 500;
@@ -96,14 +100,15 @@ main {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    height: 740px;
-    margin: 146px 166px 56px 166px;
+    min-height: 90%;
+    margin: 10% 12% 3% 12%;
+    /* margin: 9.125em 10.375em 3.5em 10.375em; */
 }
 
 .main-content-row1 {
     display: flex;
-    height: 518px;
-    width: 1100px;
+    height: 30%;
+    width: auto;
     justify-content: space-around;
 }
 
@@ -117,7 +122,7 @@ main {
 .main-planet-img {
     width: 68%;
     align-self: center;
-    padding-left: 162px;
+    padding-left: 10.125em;
 }
 
 .buttons-planet-unique {
@@ -130,22 +135,23 @@ main {
     font-family: 'Antonio', sans-serif;
     font-weight: 500;
     color: #FFFFFF;
-    font-size: 80px;
+    font-size: 5em;
+
 }
 
 .overview-content {
     font-family: 'Spartan', sans-serif;
     color: #FFFFFF;
-    font-size: 14px;
-    line-height: 25px;
-    margin: 20px 0px 18px 0px;
+    font-size: 0.875em;
+    line-height: 1.5625em;
+    margin: 5% 0%;
 }
 
 .overview-source {
-    margin-bottom: 22px;
+    margin-bottom: 4%;
     font-family: 'Spartan', sans-serif;
     font-weight: 400;
-    font-size: 14px;
+    font-size: 0.875em;
     color: #ffffff73;
 }
 
@@ -157,14 +163,15 @@ main {
 .buttons-planet-unique > button {
     border: 1px solid #ffffff46;
     background: transparent;
-    height: 48px;
-    margin: 9px 0px;
+    height: 4em;
+    margin: 2% 0%;
+    padding-top: 1.5%;
     color: #FFFFFF;
     text-align: start;
     font-family: 'Spartan', sans-serif;
     font-weight: 700;
-    font-size: 12px;
-    letter-spacing: 2.5px;
+    font-size: 0.75em;
+    letter-spacing: 0.15625em;
 }
 
 .buttons-planet-unique > button:hover {
@@ -173,17 +180,17 @@ main {
 } 
 
 .buttons-planet-unique span {
-    margin: 0px 20px;
+    margin: 0% 6%;
     color: #ffffff83;
     
 }
 
 .react-arrow {
-    height: 14px;
-    width: 14px;
+    height: 0.875em;
+    width: 0.875em;
     position: relative;
-    top: 3px;
-    left: 5px;
+    top: 0.1875em;
+    left: 0.3125em;
 }
 
 .main-content-row2 {
@@ -193,40 +200,29 @@ main {
 }
 
 .main-content-row2 > div {
-    height: 128px;
+    height: 13vh;
     border: 1px solid #ffffff46;
-    padding: 23px;
-    padding-right: 100px;
-    margin-top: 80px;
+    padding: 3% 8% 3% 2%;
+    margin-top: 8%;
 }
 
 .main-content-row2 p {
     font-family: 'Spartan', sans-serif;
     font-weight: 700;
-    font-size: 11px;
+    font-size:  0.7125em;
     color: #ffffff83;
     letter-spacing: 1px;
-    margin-bottom: 10px;
+    margin-bottom: 4%;
 }
 
 .main-content-row2 h2 {
     font-family: 'Antonio', sans-serif;
     font-weight: 500;
-    font-size: 40px;
+    font-size: 2.5em;
     color: #FFFFFF;
     letter-spacing: -1.5px;
 }
 
-.rotation-time {
-    margin-left: 0;
-}
 
-.revolution-radius {
-    margin-right: 13px;
-    margin-left: 13px;
-}
 
-.average-temp {
-    margin-right: 0px;
-}
 
