--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Antonio:wght@500&family=Spartan:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Antonio:wght@500&family=Spartan:wght@400;700&display=swap");
 
 * {
     box-sizing: border-box;
@@ -6,13 +6,13 @@
 }
 
 #root {
-    min-height: 100vh;
-    max-width: 100vw;
+    max-height: 100%;
+    max-width: 100%;
 }
 
 body {
     background-color: #070724;
-    font-family: 'Antonio','Spartan', sans-serif;
+    font-family: "Antonio", "Spartan", sans-serif;
     background-image: url(/src/assets/background-stars.svg);
 }
 
@@ -32,7 +32,7 @@ header {
 
 .header-child1 > h2 {
     margin: 3% 3%;
-    color: #FFFFFF;
+    color: #ffffff;
     font-size: 1.75em;
     font-weight: 500;
     letter-spacing: -1.05px;
@@ -45,12 +45,11 @@ header {
     width: 50%;
 }
 
-
 .header-child2 > button {
     background-color: transparent;
-    font-family: 'Spartan', sans-serif;
+    font-family: "Spartan", sans-serif;
     font-weight: 700;
-    color: #FFFFFF;
+    color: #ffffff;
     font-size: 0.6875em;
     letter-spacing: 1px;
     border: none;
@@ -63,36 +62,40 @@ header {
     height: 100%;
 }
 
+.buttons-planet-mercury:focus {
+    background-color: #419ebb;
+}
+
 .btn-mercury:hover {
-    border-top: solid #419EBB
+    border-top: solid #419ebb;
 }
 
 .btn-venus:hover {
-    border-top: solid #EDA249
+    border-top: solid #eda249;
 }
 
 .btn-earth:hover {
-    border-top: solid #6D2ED5
+    border-top: solid #6d2ed5;
 }
 
 .btn-mars:hover {
-    border-top: solid #D14C32
+    border-top: solid #d14c32;
 }
 
 .btn-jupiter:hover {
-    border-top: solid #D83A34
+    border-top: solid #d83a34;
 }
 
 .btn-saturn:hover {
-    border-top: solid #CD5120
+    border-top: solid #cd5120;
 }
 
 .btn-uranus:hover {
-    border-top: solid #1EC1A2
+    border-top: solid #1ec1a2;
 }
 
 .btn-neptune:hover {
-    border-top: solid #2D68F0
+    border-top: solid #2d68f0;
 }
 
 main {
@@ -107,9 +110,9 @@ main {
 
 .main-content-row1 {
     display: flex;
-    height: 30%;
+    height: 40%;
     width: auto;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .main-planet-description {
@@ -134,16 +137,15 @@ main {
 }
 
 .main-planet-description > h1 {
-    font-family: 'Antonio', sans-serif;
+    font-family: "Antonio", sans-serif;
     font-weight: 500;
-    color: #FFFFFF;
+    color: #ffffff;
     font-size: 5em;
-
 }
 
 .overview-content {
-    font-family: 'Spartan', sans-serif;
-    color: #FFFFFF;
+    font-family: "Spartan", sans-serif;
+    color: #ffffff;
     font-size: 0.875em;
     line-height: 1.5625em;
     margin: 5% 0%;
@@ -151,7 +153,7 @@ main {
 
 .overview-source {
     margin-bottom: 4%;
-    font-family: 'Spartan', sans-serif;
+    font-family: "Spartan", sans-serif;
     font-weight: 400;
     font-size: 0.875em;
     color: #ffffff73;
@@ -168,23 +170,22 @@ main {
     height: 4em;
     margin: 2% 0%;
     padding-top: 1.5%;
-    color: #FFFFFF;
+    color: #ffffff;
     text-align: start;
-    font-family: 'Spartan', sans-serif;
+    font-family: "Spartan", sans-serif;
     font-weight: 700;
     font-size: 0.75em;
     letter-spacing: 0.15625em;
 }
 
 .buttons-planet-unique > button:hover {
-    background-color: #38384F;
+    background-color: #38384f;
     cursor: pointer;
-} 
+}
 
 .buttons-planet-unique span {
     margin: 0% 6%;
     color: #ffffff83;
-    
 }
 
 .react-arrow {
@@ -209,22 +210,26 @@ main {
 }
 
 .main-content-row2 p {
-    font-family: 'Spartan', sans-serif;
+    font-family: "Spartan", sans-serif;
     font-weight: 700;
-    font-size:  0.7125em;
+    font-size: 0.7125em;
     color: #ffffff83;
     letter-spacing: 1px;
     margin-bottom: 4%;
 }
 
 .main-content-row2 h2 {
-    font-family: 'Antonio', sans-serif;
+    font-family: "Antonio", sans-serif;
     font-weight: 500;
     font-size: 2.5em;
-    color: #FFFFFF;
+    color: #ffffff;
     letter-spacing: -1.5px;
 }
 
 
-
-
+.geology {
+    position: absolute;
+    height: 18%;
+    margin-top: 4%;
+    align-self: flex-end;
+} 
