--- a/src/index.css
+++ b/src/index.css
@@ -5,22 +5,33 @@
     margin: 0;
 }
 
-#root {
-    max-height: 100%;
-    max-width: 100%;
-}
+/* #root {
+    min-height: 100vh;
+    max-width: 100vw;
+} */
 
 body {
     background-color: #070724;
     font-family: "Antonio", "Spartan", sans-serif;
     background-image: url(/src/assets/background-stars.svg);
+    min-height: 100vh;
+    max-width: 100vw;
 }
 
 header {
     display: flex;
-    height: 10%;
+    height: auto;
     width: auto;
     border-bottom: 1px solid #ffffff46;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    height: auto;
+    margin: 8% 12% 5% 12%;
 }
 
 .header-child1 {
@@ -98,19 +109,10 @@ header {
     border-top: solid #2d68f0;
 }
 
-main {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    min-height: 90%;
-    margin: 10% 12% 3% 12%;
-    /* margin: 9.125em 10.375em 3.5em 10.375em; */
-}
 
 .main-content-row1 {
     display: flex;
-    height: 40%;
+    height: auto;
     width: auto;
     justify-content: space-between;
 }
@@ -203,7 +205,7 @@ main {
 }
 
 .main-content-row2 > div {
-    height: 13%;
+    height: auto;
     border: 1px solid #ffffff46;
     padding: 3% 8% 3% 2%;
     margin-top: 6%;
