--- a/src/index.css
+++ b/src/index.css
@@ -5,33 +5,30 @@
     margin: 0;
 }
 
-/* #root {
-    min-height: 100vh;
-    max-width: 100vw;
-} */
-
-body {
+#root {
     background-color: #070724;
     font-family: "Antonio", "Spartan", sans-serif;
     background-image: url(/src/assets/background-stars.svg);
-    min-height: 100vh;
-    max-width: 100vw;
+    height: 100vh;
+    width: 100%;
+    min-width: 320px;
 }
 
 header {
     display: flex;
-    height: auto;
-    width: auto;
+    height: 8%;
+    width: 100%;
     border-bottom: 1px solid #ffffff46;
 }
 
 main {
     display: flex;
+    /* height: 92%; */
+    margin: 100%;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    height: auto;
-    margin: 8% 12% 5% 12%;
+    margin: 8vh 12% 5% 12%;
 }
 
 .header-child1 {
@@ -109,10 +106,9 @@ main {
     border-top: solid #2d68f0;
 }
 
-
 .main-content-row1 {
     display: flex;
-    height: auto;
+    height: 56vh;
     width: auto;
     justify-content: space-between;
 }
@@ -166,7 +162,8 @@ main {
     color: #ffffff83;
 }
 
-.buttons-planet-unique > button {
+.buttons-planet-unique > button,
+.description-button-movile {
     border: 1px solid #ffffff46;
     background: transparent;
     height: 4em;
@@ -180,12 +177,18 @@ main {
     letter-spacing: 0.15625em;
 }
 
+@media screen and (min-width: 740px) {
+    .description-button-movile {
+        display: none;
+    }
+}
+
 .buttons-planet-unique > button:hover {
     background-color: #38384f;
     cursor: pointer;
 }
 
-.buttons-planet-unique span {
+.buttons-numbers {
     margin: 0% 6%;
     color: #ffffff83;
 }
@@ -202,13 +205,14 @@ main {
     display: flex;
     justify-content: space-between;
     width: 100%;
+    margin-top: 8vh;
 }
 
 .main-content-row2 > div {
-    height: auto;
+    height: 14vh;
+    width: 14vw;
     border: 1px solid #ffffff46;
-    padding: 3% 8% 3% 2%;
-    margin-top: 6%;
+    padding: 2em 2em 2em 1em;
 }
 
 .main-content-row2 p {
@@ -228,10 +232,77 @@ main {
     letter-spacing: -1.5px;
 }
 
-
 .geology {
     position: absolute;
     height: 18%;
     margin-top: 4%;
     align-self: flex-end;
-} 
+}
+
+@media screen and (max-width: 740px) {
+    #root {
+        width: 100vw;
+        overflow-x: hidden;
+        height: auto;
+        background-size: cover;
+    }
+    header {
+        height: 8vh;
+    }
+    main {
+        margin: 0px;
+    }
+    .main-content-row1 {
+        flex-direction: column-reverse;
+        height: auto;
+    }
+    .main-planet-description {
+        display: flex;
+        flex-direction: column-reverse;
+        width: auto;
+    }
+    .main-content-row2 {
+        display: flex;
+        flex-wrap: wrap;
+        width: auto;
+    }
+    .main-content-row2 > div {
+        display: flex;
+        height: auto;
+        width: 100vw;
+        border: 1px solid #ffffff46;
+        padding: 2em 2em 2em 1em;
+    }
+    .main-content-row2 h2 {
+        font-size: 2.5em;
+        color: #ffffff;
+        letter-spacing: -1.5px;
+    }
+
+    .buttons-planet-unique {
+        display: flex;
+        flex-direction: row;
+        border-bottom: 1px solid #ffffff46;
+    }
+
+    .buttons-planet-unique span {
+        display: none;
+    }
+
+    .buttons-planet-unique > button {
+        margin: 0 20px;
+        padding: 0;
+        width: 30%;
+        border: none;
+        background-color: transparent;
+        color: #ffffff7a;
+    }
+
+    .description-button-laptop, .overview-source, .header-child2 {
+        display: none;
+    }
+
+    /* .description-button-movile {
+        background-color: transparent;
+    } */
+}
