--- a/src/index.css
+++ b/src/index.css
@@ -251,6 +251,7 @@ main {
     font-size: 2.2em;
     color: #ffffff;
     letter-spacing: -1.5px;
+    white-space: nowrap;
 }
 
 .geology {
@@ -259,7 +260,6 @@ main {
     margin-top: 0%;
     align-self: flex-end;
 }
-
 
 @media screen and (max-width: 740px) {
     #root {
@@ -413,11 +413,21 @@ main {
         padding-right: 5vw;
     }
 
-    .content-mobile {
+    @keyframes Menu-burguer {
+        from {
+            transform: scale(0.5, 0.5);
+        }
+        to {
+            transform: scale(1, 1);
+        }
+    }
+
+     .content-mobile {
         width: 100%;
         display: flex;
         flex-direction: column;
         height: 94vh;
+        animation: Menu-burguer 1.5s ease;
     }
 
     .content-mobile button {
@@ -442,11 +452,10 @@ main {
     }
 }
 
-
 @media screen and (max-width: 1040px) and (min-width: 740px) {
     header {
         display: flex;
-        flex-direction:column;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
     }
@@ -456,7 +465,7 @@ main {
     }
 
     .header-child1 {
-         /* display: flex; */
+        /* display: flex; */
         justify-content: center;
         align-items: center;
         margin: auto;
@@ -464,7 +473,7 @@ main {
 
     .header-child2 {
         width: 100%;
-        margin:auto;
+        margin: auto;
     }
 
     .header-child2 button {
@@ -479,6 +488,7 @@ main {
     .main-planet-description {
         display: flex;
         flex-direction: row;
+        align-items: center;
         width: auto;
         height: 25vh;
         gap: 10vw;
@@ -500,10 +510,9 @@ main {
         font-size: 0.68rem;
     }
 
-    .main-content-row1 { 
+    .main-content-row1 {
         height: auto;
     }
-
 
     .planet {
         height: 30vh;
@@ -515,7 +524,7 @@ main {
     }
 
     .main-content-row2 {
-        gap:10px;
+        gap: 10px;
     }
 
     .main-content-row2 h2 {
@@ -526,7 +535,4 @@ main {
         padding: 0.8em 1.2em 1em 0.5em;
         height: auto;
     }
-
 }
-
-
